apps/base/ollama-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama-webui
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
