apps/base/ollama-webui/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui-v2
  namespace: ollama-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui-v2
  template:
    metadata:
      labels:
        app: ollama-webui-v2
    spec:
      serviceAccountName: ollama-webui
      containers:
      - name: ollama-webui
        image: ghcr.io/open-webui/open-webui:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /app/backend/data
          name: webui-data
        resources:
          requests:
            memory: "3Gi"
            cpu: "1500m"
          limits:
            memory: "6Gi"
            cpu: "3000m"
      volumes:
      - name: webui-data
        persistentVolumeClaim:          claimName: ollama-webui-data
