apps/base/ollama-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-webui
  namespace: ollama-webui
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ollama-webui
  type: ClusterIP
