apps/base/ollama-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-webui
  namespace: ollama-webui
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - ai.lztechnology.io
      secretName: ollama-webui-tls-cert
  rules:
    - host: ai.lztechnology.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-webui
                port:
                  number: 8080
